# hs-simple-readline

./: README.md  simple-readline.cabal
System/Console/: SimpleReadline.hs
System/Console/SimpleReadline/: Terminal.hs  Types.hs  Zipper.hs
