Name:                simple-readline
Version:             0.1.0
Synopsis:            Simple readline implementation
Description:
   Simple readline implementation in haskell.
   .
   Only support the vt100 terminal style escapes.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.8
Homepage:            http://github.com/vincenthz/hs-simple-readline
extra-source-files:  Tests/*.hs

Library
  Build-Depends:     base >= 3 && < 5
                   , mtl
  Exposed-modules:   System.Console.SimpleReadline
  other-modules:     System.Console.SimpleReadline.Types
                     System.Console.SimpleReadline.Terminal
                     System.Console.SimpleReadline.Zipper
  ghc-options:       -Wall

source-repository head
  type: git
  location: git://github.com/vincenthz/hs-simple-readline
